Restore Visit Us section with map

--- a/index.html
+++ b/index.html
@@ -165,10 +165,85 @@
     </section>
 
     <!-- VISIT US -->
-    <section id="visit" class="visit">
-      <h2>Visit Us</h2>
-      <!-- … all your existing visit cards … -->
-    </section>
+     <!-- VISIT US -->
+<section id="visit" class="visit">
+  <h2>Visit Us</h2>
+
+  <div class="card">
+    <h3>Thank You for Wanting to Visit Us!</h3>
+    <p>We are located on the ground floor of Tokyo Central Seventh-day Adventist Church in Harajuku, behind the Laforet shopping mall.</p>
+  </div>
+
+  <div class="card">
+    <h3>Service Times</h3>
+    <div class="table-wrapper">
+      <table class="service-table">
+        <thead><tr><th>Program</th><th>Day & Time</th><th>Location</th></tr></thead>
+        <tbody>
+          <tr><td>Sabbath School</td><td>Saturdays 9:00 – 10:30</td><td>Assembly Hall (1F)</td></tr>
+          <tr><td>Divine Service</td><td>Saturdays 10:30 – 12:00</td><td>Assembly Hall (1F)</td></tr>
+          <tr><td>Afternoon Program</td><td>Saturdays 14:00 – 16:00</td><td>Assembly Hall (1F)</td></tr>
+          <tr><td>Children's Afternoon Program</td><td>Saturdays 14:00 – 16:00</td><td>Class Room (B1)</td></tr>
+          <tr><td>Bible Studies (Children/Teens)</td><td>Saturdays 15:00 – 16:00</td><td>Class Room (B1)</td></tr>
+          <tr><td>Midweek Connection</td><td>Wednesdays 19:30 – 20:30</td><td>Zoom 808-212-7314</td></tr>
+          <tr><td>Tagalog Bible Studies</td><td>Tuesdays/Thursdays 21:00 – 22:00</td><td>Zoom 381-269-2541</td></tr>
+          <tr><td>Vespers</td><td>Fridays 19:30 – 20:30</td><td>Zoom 808-212-7314</td></tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <div class="card">
+    <h3>How to Find Us</h3>
+    <h4>Train Travel</h4>
+    <p>Train travel is convenient and you can go anywhere but for first-time visitors it can be overwhelming. Please take the time to study the route between your accommodation and Harajuku to not be late and miss the service.</p>
+    <p>To make your route planning easier, please use the following service to obtain accurate train schedules and transfer recommendations.</p>
+
+    <h4>From Harajuku JR Train Station</h4>
+    <ol>
+      <li>Take the Omotesando exit (stairs going up) to leave the station.</li>
+      <li>Cross the road in front of the cosmetics store and turn right.</li>
+      <li>Follow the footpath to the left.</li>
+      <li>Walk down the footpath for about 50 meters. You will pass Nike on the left.</li>
+      <li>Take the small street (Church Avenue) to the left immediately after Softbank.</li>
+      <li>Over the rise you will see the church building on the right. The first entrance is the Japanese-language worship.</li>
+      <li>Continue around the bend to the side entrance. The entrance has a coloured stained-glass window.</li>
+      <li>The Tokyo International Seventh-day Adventist Church (TIC) is on the 1st floor.</li>
+    </ol>
+
+    <h4>From Meijijingu-Mae Metro Subway Station</h4>
+    <ol>
+      <li>Take exit 5 to leave the station.</li>
+      <li>Immediately take the side street.</li>
+      <li>Over the rise you will see the church building on the right…</li>
+    </ol>
+  </div>
+
+  <div class="card">
+    <h3>Address & Contact</h3>
+    <p>
+      1-11-1 Jingumae, Shibuya, Tokyo, Japan 150-0001<br>
+      Tel: +81 3-3402-1517<br>
+      Fax: +81 3-3404-2461<br>
+      Email: <a href="mailto:info@tokyoadventist.org">info@tokyoadventist.org</a>
+    </p>
+  </div>
+
+  <div class="card">
+    <h3>Connect With Us</h3>
+    <p>
+      YouTube: <a href="https://www.youtube.com/@TokyoAdventistChurch" target="_blank" rel="noopener">Tokyo Adventist Church</a><br>
+      Instagram: <a href="https://instagram.com/tokyosdac" target="_blank" rel="noopener">@tokyosdac</a>
+    </p>
+  </div>
+
+  <div class="card">
+    <h3>Location Map</h3>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.2314526985564!2d139.703255!3d35.670126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzXCsDQwJzEyLjUiTiAxMznCsDQyJzExLjciRQ!5e0!3e2!4v1"
+      width="100%" height="300" style="border:0;" allowfullscreen loading="lazy">
+    </iframe>
+  </div>
+</section>
 
     <!-- FOOTER -->
     <footer>
