Fix calendar, YouTube, map embeds

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <div class="card btn-frame">
         <h3>Join Us Live on YouTube</h3>
         <p>Every Sabbath we stream our worship service—tap below to watch.</p>
-        <a class="gold-btn" href="https://www.youtube.com/@TokyoAdventistChurch" target="_blank" rel="noopener">
+        <a class="gold-btn" href="https://www.youtube.com/@liftupyourvoicemediaminist7959/streams" target="_blank" rel="noopener">
           Watch on YouTube
         </a>
       </div>
@@ -165,7 +165,6 @@
     </section>
 
     <!-- VISIT US -->
-     <!-- VISIT US -->
 <section id="visit" class="visit">
   <h2>Visit Us</h2>
 
@@ -232,7 +231,7 @@
   <div class="card">
     <h3>Connect With Us</h3>
     <p>
-      YouTube: <a href="https://www.youtube.com/@TokyoAdventistChurch" target="_blank" rel="noopener">Tokyo Adventist Church</a><br>
+      YouTube: <a href="https://www.youtube.com/@liftupyourvoicemediaminist7959/streams" target="_blank" rel="noopener">Tokyo Adventist Church</a><br>
       Instagram: <a href="https://instagram.com/tokyosdac" target="_blank" rel="noopener">@tokyosdac</a>
     </p>
   </div>
